--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,14 @@ h1{
   text-align: center;
   color: #fff;
   margin: 0;
+  font-size: 2.5rem;
+}
+
+h1 span{
+  font-size: 1rem;
+  vertical-align: top;
+  display: inline-block;
+  margin-top: 6px;
 }
 
 form{
