--- a/src/component/trackerPage/Moneytracker.css
+++ b/src/component/trackerPage/Moneytracker.css
@@ -25,6 +25,11 @@
     display: inline-block;
     margin-top: 6px;
   }
+
+  p.username-show {
+    text-align: center;
+    font-size: 1.5rem;
+}
   
   form{
     margin-top: 20px;
@@ -81,7 +86,7 @@
     color: #888;
   }
   
-  div.right{
+  div.right-transaction{
     text-align: right;
   }
   
