--- a/src/Styles/auth/LoginPage.css
+++ b/src/Styles/auth/LoginPage.css
@@ -16,7 +16,7 @@
 		0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
 }
 
-.left {
+.left-login {
 	flex: 2;
 	display: flex;
 	flex-direction: column;
@@ -60,7 +60,7 @@
 	text-align: center;
 }
 
-.right {
+.right-login {
 	flex: 1;
 	display: flex;
 	flex-direction: column;
